--- a/src/global.css
+++ b/src/global.css
@@ -26,7 +26,51 @@
   animation-iteration-count: 1;
   transform: translateY(50%);
 }
-
+@media (max-width: 640px) {
+  .holder {
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  animation-name: verticalAnimation;
+  animation-duration: 4s;
+  animation-iteration-count: 1;
+  transform: translateY(50%);
+  }
+  .bar {
+    height: fit-content;
+    width: 500px;
+    /* background-image: linear-gradient(#9EB607, #D5D5EF); */
+    background-image: linear-gradient(#EBFF54, #17dff9);
+    display: flex;
+    justify-content: center;
+    overflow: hidden;
+    animation-name: barAnimationMobile;
+    animation-duration: 4s;
+    animation-iteration-count: 1;
+    rotate: 0deg;
+  }
+  .text {
+    width: 500px;
+    height: fit-content;
+    background: black;
+    overflow: hidden;
+    color: white;
+    margin-left: 5px;
+  }
+  .holdtext {
+    width: 390px;
+    height: fit-content;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    position: relative;
+    /* background: red; */
+    background: #2C2C2C;
+    border-top-right-radius: 0.75rem/* 12px */;
+    border-bottom-right-radius: 0.75rem/* 12px */;
+    padding-left: 10px;
+  }
+}
 .bar {
   height: fit-content;
   width: 1000px;
@@ -94,5 +138,27 @@
   to {
     transform: rotate(0deg);
     width: 1000px;
+  }
+}
+
+@keyframes barAnimationMobile {
+  from {
+    transform: rotate(90deg);
+    width: 5px;
+  }
+
+  25% {
+    transform: rotate(90deg);
+    width: 5px;
+  }
+
+  50% {
+    transform: rotate(0deg);
+    width: 5px;
+  }
+
+  to {
+    transform: rotate(0deg);
+    width: 500px;
   }
 }
